--- a/telegrafconf/telegrafconfig/main.conf
+++ b/telegrafconf/telegrafconfig/main.conf
@@ -3,7 +3,7 @@
 
 [agent]
 interval = "10s"
-round_interval = true  ## Telegraf will send metrics to outputs in batches of at most
+round_interval = true 
 metric_batch_size = 1000
 metric_buffer_limit = 10000
 collection_jitter = "0s"
@@ -17,8 +17,8 @@ hostname = ""
 omit_hostname = false
 
 [[outputs.influxdb]]
-urls = ["http://localhost:9096"] 
-database = "telegraf" # required
+urls = ["http://10.255.73.132:9096"] 
+database = "telegraf" 
 retention_policy = ""
 write_consistency = "any"
 timeout = "5s"
