--- a/telegrafconf/telegrafconfig/disk.conf
+++ b/telegrafconf/telegrafconfig/disk.conf
@@ -1,14 +1,14 @@
-[[inputs.disk]]
+#[[inputs.disk]]
   ## By default, telegraf gather stats for all mountpoints.
   ## Setting mountpoints will restrict the stats to the specified mountpoints.
   # mount_points = ["/"]
 
 
-  ignore_fs = ["tmpfs", "devtmpfs"]
+ # ignore_fs = ["tmpfs", "devtmpfs"]
 
 
 # Read metrics about disk IO by device
-[[inputs.diskio]]
+#[[inputs.diskio]]
   ## By default, telegraf will gather stats for all devices including
   ## disk partitions.
   ## Setting devices will restrict the stats to the specified devices.
