--- a/telegrafconf/telegrafconfig/cpu.conf
+++ b/telegrafconf/telegrafconfig/cpu.conf
@@ -1,4 +1,4 @@
 [[inputs.cpu]]
-  percpu = true
-  totalcpu = true
-  collect_cpu_time = false
+  #percpu = true
+  #totalcpu = true
+  #collect_cpu_time = false
