--- a/docker/dhcp/confexample/homedhcp.conf
+++ b/docker/dhcp/confexample/homedhcp.conf
@@ -6,3 +6,11 @@ subnet 192.168.3.0  netmask 255.255.255.0 {
   range 192.168.3.150 192.168.3.225;
   option routers 192.168.3.1;
 }
+
+
+# static host
+host dns {
+   option host-name "dns.home.damon";
+   hardware ethernet 00:A0:78:8E:9E:AA;
+   fixed-address 192.168.3.50;
+}
