--- a/systemd/example.service
+++ b/systemd/example.service
@@ -3,10 +3,10 @@ Description=CyberManagement Service
 After=network.target
 
 [Service]
-Type=simple    #can be simple,notify
+Type=simple    #simple, exec, forking, oneshot, dbus, notify or idle
 WorkingDirectory=/opt/dir/
 ExecStart=/opt/dir/cyberbotbackend_linux
-Restart=on-abort
+Restart=on-abort   #no    always    on-success    on-failure    on-abnormal    on-abort    on-watchdog
 
 [Install]
 WantedBy=multi-user.target
