--- a/nsq/nsqd.service
+++ b/nsq/nsqd.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 WorkingDirectory=/usr/local/nsq
-ExecStart=/usr/local/nsq/bin/nsqd -http-address 127.0.0.1:4151 -tcp-address 127.0.0.1:4150 -lookupd-tcp-address 127.0.0.1:4160
+ExecStart=/usr/local/bin/nsqd -http-address 10.252.52.191:4151 -tcp-address 10.252.52.191:4150 -lookupd-tcp-address 10.252.52.191:4160 -broadcast-address 10.252.52.191
 ExecReload=/bin/kill -HUP $MAINPID
 Type=simple
 KillMode=process
