--- a/dnsmasq/dnsmasq.conf
+++ b/dnsmasq/dnsmasq.conf
@@ -1,3 +1,4 @@
+#/etc/dnsmasq/dnsmasq.conf
 dhcp-range=192.168.3.50,192.168.3.100,72h
 dhcp-range=tftp,192.168.3.250,192.168.3.254  
 dhcp-host=mylaptop,192.168.3.199,36h
