--- a/dnsmasq/dnsmasq.conf
+++ b/dnsmasq/dnsmasq.conf
@@ -1,4 +1,6 @@
 #/etc/dnsmasq/dnsmasq.conf
+interface=eth1
+dhcp-host=00:50:56:2C:DA:FE,172.16.0.100
 dhcp-range=192.168.3.50,192.168.3.100,72h
 dhcp-range=tftp,192.168.3.250,192.168.3.254  
 dhcp-host=mylaptop,192.168.3.199,36h
