--- a/dnsmasq/dnsmasq.conf
+++ b/dnsmasq/dnsmasq.conf
@@ -1,4 +1,4 @@
-#/etc/dnsmasq/dnsmasq.conf
+#/etc/dnsmasq.conf
 interface=eth1
 dhcp-host=00:50:56:2C:DA:FE,172.16.0.100
 dhcp-range=192.168.3.50,192.168.3.100,72h
