--- a/dnsmasq/dnsmasq.conf
+++ b/dnsmasq/dnsmasq.conf
@@ -1,4 +1,9 @@
 #/etc/dnsmasq.conf
+
+domain-needed
+bogus-priv
+no-resolv
+
 interface=eth1
 dhcp-host=00:50:56:2C:DA:FE,172.16.0.100
 dhcp-range=192.168.3.50,192.168.3.100,72h
