--- a/dnsmasq/dnsmasq.conf
+++ b/dnsmasq/dnsmasq.conf
@@ -10,7 +10,9 @@ dhcp-range=192.168.3.50,192.168.3.100,72h
 dhcp-range=tftp,192.168.3.250,192.168.3.254  
 dhcp-host=mylaptop,192.168.3.199,36h
 #dhcp-option=option:router,192.168.3.1
-dhcp-option=1,255.255.255.0
-dhcp-option=3,192.168.3.1
-dhcp-option=3,192.168.3.115
+dhcp-option=1,255.255.255.0    #subnet masq
+dhcp-option=3,192.168.3.1     #gateway
+dhcp-option=6,192.168.3.115  #dns
+
+
 #dhcp-option=option:ntp-server,192.168.0.5
